# buff

./: .bazelrc  .codeclimate.yml  .dockerignore  .gitignore  .tool-versions  LICENSE  Makefile  README.md  WORKSPACE  buff.code-workspace  docker-compose.yaml  docker-compose.yml  puff.code-workspace  tmp.sh
.circleci/: config.yml
.docker/dev/: Dockerfile  wait-for-postgres.sh
.github/workflows/: main.yml
cli/: Cargo.toml  build.rs
cli/buffcli/: BUILD  Cargo.toml
cli/bufflib/: BUILD  Cargo.toml  build.rs
cli/bufflib/src/: artifact.rs  buff_cli_config.rs  lib.rs  package_metadata.rs  registry.rs
cli/bufflib/src/protobuffers/: buff.rs  buff_grpc.rs
cli/bufflib/tests/fixtures/test_artifact/: .ignore
cli/cargo/: BUILD  Cargo.toml
cli/config/: default.toml
cli/src/: artifact.rs  main.rs  package_metadata.rs
cli/tests/: main.rs
cli/tests/fixtures/buff_home/: config.toml
cli/tests/fixtures/test_artifact/: buff.toml
cli/tests/fixtures/test_artifact/protobuffers/: buff.proto
devenv/: docker-compose.yml
protobuffers/: buff.proto
puff_server/: .gitignore  README.md  mix.exs
puff_server/.devcontainer/: Dockerfile  devcontainer.json
puff_server/config/: config.exs  dev.exs  prod.secret.exs  test.exs
puff_server/lib/puff_server/: accounts.ex  packages.ex
puff_server/lib/puff_server_web/: router.ex
puff_server/priv/repo/: seeds.exs
puff_server/test/: test_helper.exs
puff_server/test/puff_server/: accounts_test.exs
puff_server/test/support/: data_case.ex
puffcli/: Cargo.toml
puffcli/.devcontainer/: Dockerfile  devcontainer.json
puffcli/src/: main.rs
puffcli/tests/: main.rs
server/: .credo.exs  .gitignore  .sobelow  .travis.yml  README.md  coveralls.json  docker-compose.yaml  mix.exs
server/assets/: package-lock.json  package.json
server/config/: config.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
server/lib/: buff_server.ex  buff_server_web.ex  puff_server.ex  puff_server_web.ex
server/lib/buff_server/: accounts.ex  application.ex  authentication.ex  packages.ex  repo.ex
server/lib/buff_server_grpc/: buff.pb.ex  endpoint.ex
server/lib/buff_server_web/: endpoint.ex  gettext.ex  router.ex
server/lib/puff_server/: accounts.ex  application.ex  authentication.ex  packages.ex  repo.ex
server/lib/puff_server_web/: endpoint.ex  gettext.ex  router.ex
server/priv/repo/: seeds.exs
server/test/: test_helper.exs
server/test/buff_server/: accounts_test.exs  authentication_test.exs  packages_test.exs
server/test/buff_server_grpc/: auth_service_test.exs  endpoint_test.exs  registry_service_test.exs
server/test/puff_server/: accounts_test.exs  authentication_test.exs  packages_test.exs
server/test/support/: channel_case.ex  comeonin_stub.ex  conn_case.ex  data_case.ex  factory.ex  grpc_integration_case.ex  mix_case.ex  mocks.ex
(+47 files in other folders)
