[package]
name = "bufflib"
version = "0.1.0"
authors = ["Itay Adler <itayadler@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
tar = "0.4"
ignore = "0.4.7"
tempfile = "3.0.8"
toml = "0.5.1"
tempdir = "0.3.7"
dirs = "2.0.1"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
grpcio = "0.4"
futures = "0.1.27"
protobuf = "2.6.2"
serde = "1.0.93"
serde_derive = "1.0.93"

[build-dependencies]
protoc-grpcio = "1.0.2"
