[package]
name = "buff_cli"
version = "0.1.0"
authors = []

[dependencies]
quicli = "0.4"
structopt = "0.2"
assert_cmd = "0.11.1"
rexpect = "0.3.0"
tar = "0.4"
ignore = "0.4.7"
tempfile = "3.0.8"
toml = "0.5.1"
tempdir = "0.3.7"
dirs = "2.0.1"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
grpcio = "0.4"
futures = "0.1.27"
protobuf = "2.6.2"
serde = "1.0.93"
serde_derive = "1.0.93"
protoc-grpcio = "1.0.2"

[lib]
path = "fake_lib.rs"

[raze]
workspace_path = "//cli/cargo"
target = "x86_64-unknown-linux-gnu"

[raze.crates.syn.'1.0.3']
gen_buildrs = true
additional_flags = [
  # Vendored openssl is 1.0.2m
  "--cfg=ossl102",
  "-Clink-args=-lstdc++",
]
